2002-08-19  Andy Piper  <andy@xemacs.org>

	* fileio.c (Ffile_truename): on cygwin using win32 normalize to
	win32 format.

	* realpath.c (xrealpath): normalize drive spec also so that dir
	sep chars are not mixed on cygwin.

2002-09-01  Mike Alexander  <mta@arbortext.com>

	* event-msw.c (winsock_closer): Use closesocket, not CloseHandle
	to close a socket.

2002-08-31  Seiichi Ikiuo  <ikiuo@polyphony.co.jp>

	* file-coding.h (detection_result): fix DET_LOWEST.

	* mule-coding.c
	(big5_detector): Add member 'seen_euc_char'.
	(big5_detect): It was made not to become the trouble of EUC.
	(iso2022_detector): Add member 'longest_even_high_byte'.
	(iso2022_detect): Fix checking for even/odd_high_byte_group.
	The judgment of EUC is changed. 

	* unicode.c: Add DETECTOR_CATEGORY utf_8_bom.
	(utf_8_detector): Add member byteno, first_byte and second_byte.
	(utf_8_detect): The judgment of UTF-8-BOM is added.

2002-08-30  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.9 "brussels sprouts" is released.

2002-08-29  Jerry James  <james@xemacs.org>

	* lisp.h: structrures -> structures.

2002-08-21  Jerry James  <james@xemacs.org>

	* getloadavg.c: Substitute syssignal.h for signal.h.
	* malloc.c: Ditto.
	* unexhp9k3.c: Ditto.
	* syssignal.h: Put NSIG setting code for SVR4 here.
	* s/usg5-4.h: Don't include signal.h.  Remove NSIG setting code,
	since signal.h has not yet been included.

2002-08-16  Steve Youngs  <youngs@xemacs.org>

	* config.h.in (XEMACS_EXTRA_NAME): New.

	* emacs.c (vars_of_emacs): Use it.

2002-08-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* eval.c (do_autoload): GCPRO both arguments and a local Lisp_Object.

	* callint.c (Fcall_interactively):
	* eval.c (function_argcount):
	(Fmacroexpand_internal):
	(Fcommand_execute):
	(Feval):
	(Ffuncall):
	* keymap.c (get_keymap):
	* lisp.h (do_autoload):
	Add comment that do_autoload GCPROs both arguments.

2002-08-20  Stephen J. Turnbull  <stephen@xemacs.org>
